--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "XESMF"
 uuid = "2e0b0046-e7a1-486f-88de-807ee8ffabe5"
-authors = ["Gregory Wagner <wagner.greg@gmail.com>"]
-version = "0.1.0"
+authors = ["NumericalEarth and contributors"]
+version = "0.1.1"
 
 [deps]
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
