Refactor documentation workflow in GitHub Actions
Updated GitHub Actions workflow for documentation build and deployment.

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,44 +2,36 @@ name: Documentation
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     tags: '*'
   pull_request:
-    branches: [ main ]
 
 jobs:
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
+  build:
+    # These permissions are needed to:
+    # - Deploy the documentation: https://documenter.juliadocs.org/stable/man/hosting/#Permissions
+    # - Delete old caches: https://github.com/julia-actions/cache#usage
     permissions:
+      actions: write
       contents: write
-      pages: write
-      id-token: write
-    
+      pull-requests: read
+      statuses: write
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: julia-actions/setup-julia@v1
+      - uses: julia-actions/setup-julia@v2
         with:
           version: '1.11'
-          
+      - uses: julia-actions/cache@v2
       - name: Install dependencies
+        shell: julia --color=yes --project=docs {0}
         run: |
-          julia --project=docs/ -e '
-            using Pkg;
-            Pkg.develop(PackageSpec(path=pwd()));
-            Pkg.instantiate()'
-            
-      - name: Build documentation
+          using Pkg
+          Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.instantiate()
+      - name: Build and deploy
+        run: julia --color=yes --project=docs docs/make.jl
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: julia --project=docs/ docs/make.jl
-        
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./docs/build
-        
-      - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
-        uses: actions/deploy-pages@v4
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
