--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,9 @@ jobs:
       # 🧠 Only on Windows — manually add ESMF/ESMPy
       - name: Install ESMF/ESMPy for XESMF.jl
         if: runner.os == 'Windows'
-        run: julia -e 'using CondaPkg; CondaPkg.add(["esmf", "esmpy"])'
+        run: |
+          julia -e 'import Pkg; Pkg.add("CondaPkg")'
+          julia -e 'using CondaPkg; CondaPkg.add(["esmf", "esmpy"])'
 
       - uses: julia-actions/julia-runtest@v1
         with:
