--- a/.github/workflows/DocPreviewsCleanup.yml
+++ b/.github/workflows/DocPreviewsCleanup.yml
@@ -10,10 +10,10 @@ on:
       lookback:
         default: 3
 
-# Ensure that only one "Doc Previews Cleanup" workflow is force pushing at a time
 concurrency:
-  group: doc-preview-cleanup
-  cancel-in-progress: false
+  # Same group concurrency as the `Documentation.yml` workflow, because they both
+  # git-push to the same branch, so we want to avoid clashes.
+  group: docs-pushing
 
 jobs:
   doc-preview-cleanup:
@@ -22,7 +22,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           ref: gh-pages
       - name: Delete preview and history + push changes
